Трум турум и готово

--- a/Store.DataAccess/Store.DataAccess.csproj
+++ b/Store.DataAccess/Store.DataAccess.csproj
@@ -1,7 +1,38 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
+
+    <ItemGroup>
+      <None Include="DataModels\Database.generated.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Database.tt</DependentUpon>
+      </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="linq2db.PostgreSQL" Version="2.9.7" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="DataModels\Database.tt">
+        <Generator>TextTemplatingFileGenerator</Generator>
+        <LastGenOutput>Database.generated.cs</LastGenOutput>
+      </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="DataModels\Database.generated.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Database.tt</DependentUpon>
+      </Compile>
+    </ItemGroup>
 
 </Project>
