--- a/Store.Web/Store.Web.csproj
+++ b/Store.Web/Store.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -58,6 +58,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Store.BusinessLogic\Store.BusinessLogic.csproj" />
       <ProjectReference Include="..\Store.DataAccess\Store.DataAccess.csproj" />
+      <ProjectReference Include="..\Store.Migrator\Store.Migrator.csproj" />
     </ItemGroup>
 
     <ItemGroup>
