--- a/Store.Web/appsettings.json
+++ b/Store.Web/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings:DefaultConnection": "Server=localhost;Port=5432;Database=store_db;UserId=postgres;Password=password;enlist=true",
   "AllowedHosts": "*"
 }
